<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="#FFFFFF"
    android:gravity="center">

    <ImageButton
        android:id="@+id/btnMoodFollowing"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/home_black"
        android:scaleType="fitCenter"
        android:background="@null"
        android:contentDescription="@string/mood_following" />

    <ImageButton
        android:id="@+id/btnDiscover"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/compass_white"
        android:scaleType="fitCenter"
        android:background="@null"
        android:contentDescription="Discover"
        android:layout_marginStart="24dp" />

    <ImageButton
        android:id="@+id/btnMoodMap"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/map_white"
        android:scaleType="fitCenter"
        android:background="@null"
        android:contentDescription="@string/mood_map"
        android:layout_marginStart="24dp" />

    <ImageButton
        android:id="@+id/btnUserProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/profile_white"
        android:scaleType="fitCenter"
        android:background="@null"
        android:contentDescription="@string/user_profile"
        android:layout_marginStart="24dp" />

</LinearLayout>
